deployments/data-retrieval.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-retrieval-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-retrieval
  template:
    metadata:
      labels:
        app: data-retrieval
    spec:
      containers:
      - name: data-retrieval
        image: adiselv/captivate.data-retrieval:latest
        imagePullPolicy: Always
