deployments/model-execution.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-execution-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-execution
  template:
    metadata:
      labels:
        app: model-execution
        version: v1
    spec:
      containers:
      - name: model-execution
        image: adiselv/captivate.model-execution:latest
        imagePullPolicy: Always
