deployments/post-process.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-process-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-process
  template:
    metadata:
      labels:
        app: post-process
        version: v1
    spec:
      containers:
      - name: post-process
        image: adiselv/captivate.post-process:latest
        imagePullPolicy: Always
