deployments/ui-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
  template:
    metadata:
      labels:
        app: ui-app
    spec:
      containers:
      - name: ui
        image: adiselv/captivate.ui:0.0.2
        ports:
        - containerPort: 3000
