deployments/user-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
        version: v1
    spec:
      containers:
      - name: user-management
        image: adiselv/captivate.user-management:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8181
