deployments/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
  selector:
    app: kafka_app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka_app
  template:
    metadata:
      labels:
        app: kafka_app
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka:2.11-2.0.0
        ports:
        - containerPort: 9092
