deployments/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: api-gateway
    
---
apiVersion: v1
kind: Service
metadata:
  name: session-management
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3005
    targetPort: 3005
  selector:
    app: session-management

---

apiVersion: v1
kind: Service
metadata:
  name: user-management
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8181
    targetPort: 8181
  selector:
    app: user-management
