deployments/session-management.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-management
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3005
    targetPort: 3005
  selector:
    app: session-management
---
apiVersion: v1
kind: Service
metadata:
  name: session-management-db
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: session-management-db

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-management-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-management-db
  template:
    metadata:
      labels:
        app: session-management-db
    spec:
      containers:
      - name: session-management-db
        image: mongo:4.0.4
        ports:
        - containerPort: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-management-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-management
  template:
    metadata:
      labels:
        app: session-management
    spec:
      containers:
      - name: session-management
        image: adiselv/captivate.session-management:0.0.1
        ports:
        - containerPort: 3005
