deployments/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: ui-app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
  template:
    metadata:
      labels:
        app: ui-app
    spec:
      containers:
      - name: ui
        image: adiselv/captivate.ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
