deployments/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway
spec:
  hosts:
  - "*"
  gateways:
  - captivate-gateway
  http:
  - route:
    - destination:
        host: api-gateway
        
---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-service
spec:
  hosts:
  - "*"
  gateways:
  - captivate-gateway
  http:
  - route:
    - destination:
        host: ui-app
        
---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: session-management
spec:
  hosts:
  - "*"
  gateways:
  - captivate-gateway
  http:
  - route:
    - destination:
        host: session-management
        
        
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-management
spec:
  hosts:
  - "*"
  gateways:
  - captivate-gateway
  http:
  - route:
    - destination:
        host: user-management
